--- a/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
@@ -297,7 +297,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-globe"></i>
-                                        <span><a href="http://www.pay365.vn">www.pay365.vn</a></span>
+                                        <span><a href="//www.pay365.vn">www.pay365.vn</a></span>
                                     </li>
                                 </ul>
                             </div>
