--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -13,7 +13,7 @@
                         @*<div class="avatar">
                             <a href="/thong-tin-tai-khoan">
                                 {{if Avatar}}
-                                <img src="http://alpha.pay365.vn/upload/avatar/${ Avatar }" alt="">
+                                <img src="//pay365.vn/upload/avatar/${ Avatar }" alt="">
                                 {{else}}
                                 <img src="@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/persons/1.jpg" alt="">
                                 {{/if}}
@@ -170,7 +170,7 @@
                                         <ul id='ddr-input-nick' class='dropdown-content'></ul>
                                     </div>
                                     <a href="javascript:;" onclick="payment.CheckNicknameExist();" id="btnCheckNick" class="btn btn-sm btn-flat btn-secondary btn-input-right waves-effect waves-light" style="right:20px">@Resources.Payment.btnCheck</a>
-                                    <input type="text" id="txtNickname" maxlength="15" placeholder="@Resources.Payment.NickName" onkeyup="utils.ChangeText(event);">
+                                    <input type="text" id="txtNickname" maxlength="15" placeholder="@Resources.Payment.NickName" onkeyup="utils.ChangeText(event); payment.changeNickname();">
                                     <span class="error-text"></span>
                                     <span class="success-text"></span>
                                 </div>
@@ -179,7 +179,6 @@
                                 <div class="icon"><i class="material-icons">desktop_windows</i></div>
                                 <div class="form-data">
                                     <select id="ddr-select-server" onchange="payment.changeSelectServer();"></select>
-                                    <label>Server</label>
                                 </div>
                             </div>
                             <div class="form-group input-field">
