--- a/Pay365/Pay365Wallet/Views/Shared/_MainLayout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_MainLayout.cshtml
@@ -280,9 +280,9 @@
                                 </a>
                             </li>
 
-                            <li class="menu-item">
+                            @*<li class="menu-item">
                                 <a href="@(rootDomain)nap-game" class="sidebar-item-link"><i class="icon material-icons">videogame_asset</i> <span class="name">@Resources.Common.Menu_Utility3</span></a>
-                            </li>
+                            </li>*@
 
                             @*<li class="menu-item">
                                     <a href="/payment-bill" class="sidebar-item-link"><i class="icon material-icons">receipt</i> <span class="name">@Resources.Common.Menu_Utility4</span></a>
