--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -202,6 +202,9 @@
                             <div class="action">
                                 <a href="javascript:;" id="btnPaymentGameCheckInput" onclick="payment.TopupGameMain_CheckInput();" class="btn btn-primary btn-flat uppercase waves-effect waves-primary">@Resources.Payment.btn_next <i class="material-icons">keyboard_arrow_right</i></a>
                             </div>
+                            <div class="coming-soon">
+                                <div class="ribbon"><span>Coming Soon</span></div>
+                            </div>
                         </div>
                     </div>
                 </div>
