--- a/Pay365/Pay365Wallet/Views/Account/AccountInfo.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/AccountInfo.cshtml
@@ -260,7 +260,7 @@
 
                                                 {{if SecurityType == 0}}
                                                 <a href="/cai-dat-bao-mat" class="btn btn-icon btn-danger">
-                                                    <span class="txt">@Resources.Common.registerOTP</span>
+                                                    <span class="txt">@Resources.Home.String2</span>
                                                     <i class="material-icons">clear</i>
                                                 </a>
                                                 {{else}}
