--- a/Pay365/Pay365Wallet/Content/assets/css/style.css
+++ b/Pay365/Pay365Wallet/Content/assets/css/style.css
@@ -173,7 +173,7 @@ input:-ms-input-placeholder { font-weight: 400; color: #aaa; }
 .card .card-form { padding-left: 0px; padding-right: 0px; }
 @media screen and (min-width: 768px) { .card .card-form { padding-left: 45px; padding-right: 45px; } }
 .card .card-form .row { margin-bottom: 0; }
-.card.card-single { margin: 0 auto; width: 100%; }
+.card.card-single { margin: 0 auto; width: 100%; margin-bottom: 40px;}
 @media screen and (min-width: 1200px) { .card.card-single { width: 760px; } }
 .card.card-single .card-content { padding-top: 40px; padding-bottom: 40px; }
 .card .collapsible { padding-bottom: 15px; padding-left: 10px; padding-right: 10px; margin-left: 0 !important; margin-right: 0 !important; }
