--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -64,7 +64,7 @@
                         <span class="name">@Resources.Common.String5</span>
                     </a>
                 </div>
-                <div class="col-xs-3">
+                <div class="col-xs-3 hidden">
                     <a href="/nap-game" class="waves-effect waves-secondary">
                         <span class="icon">
                             <i class="material-icons">videogame_asset</i>
@@ -114,7 +114,7 @@
                                         <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-phone' style="color: #333"><i class="material-icons" style="">keyboard_arrow_down</i></a>
                                         <ul id='ddr-input-phone' class='dropdown-content'></ul>
                                     </div>
-                                    <input type="text" placeholder="@Resources.Payment.String7" id="txtPhoneNumber" maxlength="13" onkeypress="utils.checkOnlyNumber(this, event);" onkeyup="utils.formatPhoneInput(this, event); utils.ChangeText(event); payment.GetListAmount(this);">
+                                    <input type="text" placeholder="@Resources.Payment.String7" id="txtPhoneNumber" maxlength="13" onkeypress="" onkeyup="utils.checkOnlyNumber(this, event); utils.formatPhoneInput(this, event); utils.ChangeText(event); payment.GetListAmount(this);">
                                     <span class="error-text"></span>
                                     <span class="success-text"></span>
                                 </div>
