--- a/Pay365/Pay365Wallet/Views/Shared/_LoginLayout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_LoginLayout.cshtml
@@ -105,6 +105,7 @@
             }
         })(document, 'script');
     </script>
+    <script src="~/Scripts/main.js"></script>
 </head>
 
 <body class="accountPage">
