--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -114,7 +114,7 @@
                                         <a class='dropdown-button dropdown-input' href='javascript:;' data-activates='ddr-input-phone' style="color: #333"><i class="material-icons" style="">keyboard_arrow_down</i></a>
                                         <ul id='ddr-input-phone' class='dropdown-content'></ul>
                                     </div>
-                                    <input type="text" placeholder="@Resources.Payment.String7" id="txtPhoneNumber" maxlength="13" onkeypress="" onkeyup="utils.checkOnlyNumber(this, event); utils.formatPhoneInput(this, event); utils.ChangeText(event); payment.GetListAmount(this);">
+                                    <input type="tel" pattern="[0-9]*" placeholder="@Resources.Payment.String7" id="txtPhoneNumber" maxlength="13" onkeypress="" onkeyup="utils.checkOnlyNumber(this, event); utils.formatPhoneInput(this, event); utils.ChangeText(event); payment.GetListAmount(this);">
                                     <span class="error-text"></span>
                                     <span class="success-text"></span>
                                 </div>
