--- a/Pay365/Pay365Wallet/Views/News/News_Detail.cshtml
+++ b/Pay365/Pay365Wallet/Views/News/News_Detail.cshtml
@@ -37,7 +37,7 @@
                 {
                     <a href="@Html.Raw(Pay365.Utils.Config.Domain)" class="breadcrumb waves-effect waves-light">@Resources.Account_info.btn_home</a>
                 }
-                <a href="/news" class="breadcrumb waves-effect waves-light">@Resources.Common.btn_news</a>
+                <a href="/tin-tuc" class="breadcrumb waves-effect waves-light">@Resources.Common.btn_news</a>
             </div>
         </div>
     </section>
