--- a/Pay365/Pay365Wallet/Views/Account/Index.cshtml
+++ b/Pay365/Pay365Wallet/Views/Account/Index.cshtml
@@ -64,13 +64,17 @@
                         <span class="name">@Resources.Common.String5</span>
                     </a>
                 </div>
-                <div class="col-xs-3 hidden">
+                <div class="col-xs-3">
                     <a href="/nap-game" class="waves-effect waves-secondary">
                         <span class="icon">
                             <i class="material-icons">videogame_asset</i>
                         </span>
                         <span class="name">@Resources.Common.String6</span>
                     </a>
+
+                    <div class="coming-soon">
+                        <div class="ribbon"><span>Coming Soon</span></div>
+                    </div>
                 </div>
                 <div class="col-xs-3">
                     <a href="/mua-the-game" class="waves-effect waves-secondary">
