--- a/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
@@ -258,6 +258,7 @@
                                         <li><a href="@(Html.Raw(Pay365.Utils.Config.Domain)+ "lien-he")">@Resources.Common.lbl_corperation</a></li>
                                         <li><a href="@(Html.Raw(Pay365.Utils.Config.Domain)+ "huong-dan/chi-tiet?category=faq")">@Resources.Common.guide_10</a></li>
                                         <li><a href="@(Html.Raw(Pay365.Utils.Config.Domain)+ "tin-tuc")">@Resources.Common.btn_news</a></li>
+                                        <li><a href="@(Html.Raw(Pay365.Utils.Config.Domain)+ "huong-dan")">@Resources.Common.guide_1</a></li>
                                     </ul>
                                 </div>
                             </div>
