--- a/Pay365/Pay365Wallet/Views/Transfer/TransferMoney.cshtml
+++ b/Pay365/Pay365Wallet/Views/Transfer/TransferMoney.cshtml
@@ -36,7 +36,7 @@
                                         </div>
                                         <input maxlength="13" id="txtUsername" onblur="transfer.GetTransferAccount(this);" onkeypress="utils.checkOnlyNumber(this, event);" onkeyup="utils.formatPhoneInput(this, event);" type="text" value="">
                                         <label for="txtUsername">@Resources.Transfer.ReceivedAcc</label>
-                                        <span style="padding-left: 45px; padding-top: 3px" class="error-text"></span>
+                                        <span style="padding-top: 3px" class="error-text"></span>
                                         <span class="success-text"></span>
                                         <span id="transfer_account_name" class="charge-name"></span>
                                     </div>
@@ -45,7 +45,7 @@
                                         <i class="material-icons prefix">monetization_on</i>
                                         <input maxlength="10" onkeypress="utils.checkOnlyNumber(this, event);" onkeyup="utils.formatCurrency(this, event);utils.ChangeText(event);" id="txtAmount" type="text" class="autocomplete">
                                         <label for="txtAmount">@Resources.Transfer.Amount</label>
-                                        <span style="padding-left: 45px; padding-top: 3px" class="error-text"></span>
+                                        <span style="padding-top: 3px" class="error-text"></span>
                                     </div>
 
                                     <div class="form-group">
