--- a/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
@@ -279,7 +279,7 @@
                                     </li>
                                     <li>
                                         <i class="fa fa-skype"></i>
-                                        <span><a href="skype:lethithanhhuong.snh">lethithanhhuong.snh</a></span>
+                                        <span><a href="skype:lethithanhhuong.snh?chat">lethithanhhuong.snh</a></span>
                                     </li>
                                 </ul>
                             </div>
