--- a/Pay365/Pay365Wallet/Views/Home/About.cshtml
+++ b/Pay365/Pay365Wallet/Views/Home/About.cshtml
@@ -47,10 +47,10 @@
                     </div>
                 </div>
                 <div class="socials">
-                    <a href="#!" class="social-link facebook"><i class="fa fa-facebook"></i></a>
-                    <a href="#!" class="social-link twitter"><i class="fa fa-twitter"></i></a>
-                    <a href="#!" class="social-link instagram"><i class="fa fa-instagram"></i></a>
-                    <a href="#!" class="social-link tumblr"><i class="fa fa-tumblr"></i></a>
+                    <a href="https://www.facebook.com/Pay365-1725246437784710/" target="_blank" class="social-link facebook"><i class="fa fa-facebook"></i></a>
+                    @*<a href="#!" class="social-link twitter"><i class="fa fa-twitter"></i></a>*@
+                    @*<a href="#!" class="social-link instagram"><i class="fa fa-instagram"></i></a>*@
+                    <a href="https://plus.google.com/u/1/116306868248503257513" target="_blank" class="social-link google"><i class="fa fa-google-plus"></i></a>
                 </div>
             </div>
         </section>
