--- a/Pay365/Pay365Wallet/Views/Shared/_LoginLayout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_LoginLayout.cshtml
@@ -44,8 +44,8 @@
         "logo": "@Html.Raw(Pay365.Utils.Config.Domain)Content/assets/images/logo-purple.svg",
         "sameAs" : [
         "https://twitter.com/pay365",
-        "https://www.facebook.com/pay365",
-        "https://plus.google.com/106377879920743719402/posts?hl=en",
+        "https://www.facebook.com/Pay365-1725246437784710/",
+        "https://plus.google.com/u/1/116306868248503257513",
         "@Html.Raw(Pay365.Utils.Config.Domain)"
         ]
         }
@@ -81,7 +81,7 @@
                 m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-105001096-1', 'auto');
+        ga('create', 'UA-106798536-1', 'auto');
 
         $(function () {
             trackingPageView();
@@ -95,13 +95,17 @@
                 z.set.
                     _.push(o)
             }; z._ = []; z.set._ = []; $.async = !0; $.setAttribute('charset', 'utf-8');
-            $.src = 'https://v2.zopim.com/?53hxOfjSlu7ueig66jO5r1GClMwgcgj4'; z.t = +new Date; $.
+            $.src = 'https://v2.zopim.com/?57myuEY8jh9WF8kBKZhnywgBT2ca2CUS'; z.t = +new Date; $.
                 type = 'text/javascript';
             e.parentNode.insertBefore($, e);
             $.onload = function () {
                 $zopim.livechat.theme.setColor('#834be1', 'badge');
                 $zopim.livechat.window.setColor('#834be1');
                 $zopim.livechat.theme.reload();
+                var lang = utils.getCurrentLanguage();
+                if (lang == "vn")
+                    lang = "vi";
+                $zopim.livechat.setLanguage(lang);
             }
         })(document, 'script');
     </script>
