--- a/Pay365/Pay365Wallet/Views/Shared/_LayoutOut.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_LayoutOut.cshtml
@@ -72,7 +72,7 @@
     </script>
     @Styles.Render("~/Content_main/css")
     @Scripts.Render("~/bundles/jquery")
-    
+
     <script>
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -117,15 +117,15 @@
         <aside class="sidebar">
             <div class="sb-content">
                 <a href="/thong-tin" class="logo"><img src="@(rootDomain)Content/assets/images/logo-white.svg" alt=""></a>
-                <div class="userinfo" style="height: 87px;">
+                <div class="userinfo" style="">
 
                 </div>
                 <div class="blocks mCustomScrollbar">
-                    <div class="sb-block">
+                    <div class="sb-block" style="padding-top:20px">
                         <p class="sb-title">@Resources.Common.String16</p>
                         <ul class="menu">
                             <li class="menu-item">
-                                <a href="@(rootDomain)nap-tien" class="sidebar-item-link">
+                                <a href="@(rootDomain)dang-nhap?return=topup" class="sidebar-item-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="24" height="24" class="icon">
                                         <defs>
                                             <filter id="mask-ic-cash-in">
@@ -137,30 +137,10 @@
                                     </svg>
                                     <span class="name">@Resources.Common.String2</span> @*<i class="material-icons expand-icon">keyboard_arrow_down</i>*@
                                 </a>
-                                @*<ul class="submenu">
-                                    <li class="submenu-item">
-                                        <a href="@(rootDomain)nap-tien">@Resources.Common.Menu_Topup1</a>
-                                    </li>
-                                    <li class="submenu-item">
-                                            <a href="#!">Nạp qua thẻ quốc tế</a>
-                                        </li>
-                                        <li class="submenu-item">
-                                            <a href="#!">Nạp qua chuyển khoản ngân hàng</a>
-                                        </li>
-                                        <li class="submenu-item">
-                                            <a href="#!">Nạp qua thẻ cào</a>
-                                        </li>
-                                        <li class="submenu-item">
-                                            <a href="#!">Nạp tiền qua thẻ gắn kết</a>
-                                        </li>
-                                        <li class="submenu-item">
-                                            <a href="#!">Gửi thông báo nạp tiền</a>
-                                        </li>
-                                </ul>*@
                             </li>
 
                             <li class="menu-item">
-                                <a href="@(rootDomain)chuyen-tien" class="sidebar-item-link">
+                                <a href="@(rootDomain)dang-nhap?return=transfer" class="sidebar-item-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="24" height="24" class="icon">
                                         <defs>
                                             <filter id="mask-ic-transfer">
@@ -175,7 +155,7 @@
                             </li>
 
                             <li class="menu-item">
-                                <a href="@(rootDomain)rut-tien" class="sidebar-item-link">
+                                <a href="@(rootDomain)dang-nhap?return=cashout" class="sidebar-item-link">
                                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="24" height="24" class="icon">
                                         <defs>
                                             <filter id="mask-ic-cash-out">
@@ -188,8 +168,8 @@
                                 </a>
                             </li>
                             @*<li class="menu-item">
-                                <a href="#!" class="sidebar-item-link"><i class="icon payicon borrow"></i> <span class="name">Mượn tiền</span></a>
-                            </li>*@
+                                    <a href="#!" class="sidebar-item-link"><i class="icon payicon borrow"></i> <span class="name">Mượn tiền</span></a>
+                                </li>*@
                         </ul>
                     </div>
 
@@ -229,18 +209,18 @@
                             </li>
 
                             @*<li class="menu-item">
-                                <a href="@(rootDomain)nap-game" class="sidebar-item-link"><i class="icon material-icons">videogame_asset</i> <span class="name">@Resources.Common.Menu_Utility3</span></a>
-                            </li>*@
+                                    <a href="@(rootDomain)nap-game" class="sidebar-item-link"><i class="icon material-icons">videogame_asset</i> <span class="name">@Resources.Common.Menu_Utility3</span></a>
+                                </li>*@
 
                             @*<li class="menu-item">
-                                <a href="/payment-bill" class="sidebar-item-link"><i class="icon material-icons">receipt</i> <span class="name">@Resources.Common.Menu_Utility4</span></a>
-                            </li>*@
+                                    <a href="/payment-bill" class="sidebar-item-link"><i class="icon material-icons">receipt</i> <span class="name">@Resources.Common.Menu_Utility4</span></a>
+                                </li>*@
                             @*<li class="menu-item">
-                                <a href="#!" class="sidebar-item-link"><i class="icon material-icons">local_activity</i> <span class="name">Đặt vé</span></a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="#!" class="sidebar-item-link"><i class="icon material-icons">more_horiz</i> <span class="name">Khác</span></a>
-                            </li>*@
+                                    <a href="#!" class="sidebar-item-link"><i class="icon material-icons">local_activity</i> <span class="name">Đặt vé</span></a>
+                                </li>
+                                <li class="menu-item">
+                                    <a href="#!" class="sidebar-item-link"><i class="icon material-icons">more_horiz</i> <span class="name">Khác</span></a>
+                                </li>*@
                         </ul>
                     </div>
 
@@ -260,8 +240,8 @@
                                 <a href="/huong-dan" class="sidebar-item-link"><i class="icon material-icons">accessibility</i><span class="name">@Resources.Common.Menu_partner</span></a>
                             </li>
                             @*<li class="menu-item">
-                                <a href="/privacy" class="sidebar-item-link"><i class="icon material-icons">new_releases</i><span class="name">@Resources.Common.Menu_privacy</span></a>
-                            </li>*@
+                                    <a href="/privacy" class="sidebar-item-link"><i class="icon material-icons">new_releases</i><span class="name">@Resources.Common.Menu_privacy</span></a>
+                                </li>*@
                         </ul>
                     </div>
                 </div>
@@ -344,9 +324,9 @@
     @Scripts.Render("~/bundles/pay365libjs")
     @Scripts.Render("~/bundles/js_main")
     @Scripts.Render("~/bundles/pay365commonjs")
-    <script src="@Html.Raw(Pay365.Utils.Config.Domain)Scripts/views/news.js"></script>
+    @Scripts.Render("~/bundles/pay365LogoutViewjs")
 
-    <script src="~/Scripts/libs/croppie/croppie.min.js"></script>
+
     <script type="text/javascript">
     var listResource = ['common.homepage', 'profile.password', 'common.register', 'common.errorcode','profile.account', 'common.news'];
     var currlang = utils.getCurrentLanguage();
@@ -394,7 +374,14 @@
             news.Btn_SearchNews();
         }
     });
-
+        $(window).resize(function () {
+        initHeightColumn();
+        sideBar();
+    });
+        $(window).on('load', function () {
+            initHeightColumn();
+            sideBar();
+        });
     </script>
 </body>
 </html>
