--- a/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
+++ b/Pay365/Pay365Wallet/Views/Shared/_Layout.cshtml
@@ -88,9 +88,19 @@
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
                 m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-106798536-1', 'auto');
-
+        var GA_LOCAL_STORAGE_KEY = 'ga:clientId';
+        if (window.localStorage) {
+            ga('create', 'UA-106798536-1', {
+                'storage': 'none',
+                'clientId': localStorage.getItem(GA_LOCAL_STORAGE_KEY)
+            });
+            ga(function (tracker) {
+                localStorage.setItem(GA_LOCAL_STORAGE_KEY, tracker.get('clientId'));
+            });
+        }
+        else {
+            ga('create', 'UA-106798536-1', 'auto');
+        }
         $(function () {
             trackingPageView();
         });
